--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://github.com/gregoirebouiller/e-plantShopping",
   "name": "e-plantShopping",
   "private": true,
   "version": "0.0.0",
